# Obsidian-Engram

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  settings.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: demo.tape  design.md  memory-architecture.md  memory-format.md  principles.md
hooks/: guard.py  session-start.py
memory-template/: MEMORY.md  feedback_example.md  project_example.md  reference_example.md  user_example.md
scripts/: archive_finished_queue.py  doctor.py  memory_lint.py
skills/handoff/: SKILL.md
skills/reflect/: SKILL.md
tests/: conftest_paths.py  test_archive.py  test_guard.py  test_memory_lint.py  test_session_start.py
vault-template/: 00-Index.md  CLAUDE.md  LIVE-STATE.md  build-queue.md
vault-template/handoffs/: 2025-01-15-example-handoff.md
